December 28, 2013
Version 0.4.1

Changes to the internals of multiple tools to provide support for 
  multiprocessing in Windows environments.
Changes to the internals of multiple tools to provide clean exit of
  child processes upon kill signal or exception in sibling process 

IgCore:
+ Added reporting of unknown exceptions when reading sequence files
+ Fixed scoring of lowercase sequences

AlignSets:
+ Fixed a typo in the log output

BuildConsensus:
+ Fixed a typo in the log output

EstimateError:
+ Fixed bug where tool would improperly exit if no sets passed threshold
  criteria.
+ Fixed typo in console output

MaskPrimers:
+ Added 'trim' mode which will cut the region before primer alignment, but 
  leave primer region unmodified.
+ Fixed a bug with lowercase sequence data
+ Fixed bug in the console and log output
+ Added support for primer matching when setting '--maxerr 1.0'

ParseHeaders:
+ Added count of sequences without any valid fields (FAIL) to console output

ParseLog:
+ Added count of records without any valid fields (FAIL) to console output

SplitSeq:
+ Fixed typo in console output of samplepair subcommand
+ Added increase of the open file limit to the group subcommand to allow for a 
  large number of groups

-------------------------------------------------------------------------------
September 30, 2013
Version 0.4.0

Minor name changes were made to multiple scripts, functions, parameters,
  and output files

AlignSets, AssemblePairs, BuildConsensus, EstimateError, FilterSeq, and 
  MaskPrimers are now multithreaded.  The number of simultaneous processes
  may be specified using '--nproc (value)'. Note this means file ordering
  is no longer preserved between the input and output sequence files.

Performance improvements were made to several tools.

The universal '--verbose' parameter was replaced with '--log (file name)'
  which specifies a log file for verbose output, and disables verbose logging
  if not specified.  
